Make design for control program and add 2 rectangles on main screen

--- a/IPP_Lb2/IPP_Lb2.csproj
+++ b/IPP_Lb2/IPP_Lb2.csproj
@@ -81,6 +81,9 @@
         <EmbeddedResource Include="Windows\MainWindow.resx">
           <DependentUpon>MainWindow.cs</DependentUpon>
         </EmbeddedResource>
+        <EmbeddedResource Include="Windows\SecondControlWindow.resx">
+          <DependentUpon>SecondControlWindow.cs</DependentUpon>
+        </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
